Revert some of the debugging changes
Signed-off-by: Michael Edgar <medgar@redhat.com>