@@ -5,10 +5,8 @@ import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import org.apache.kafka.common.config.TopicConfig;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -24,7 +22,6 @@ import io.streamshub.clik.kafka.TopicService;
 import io.streamshub.clik.test.ClikMainTestBase;
 import io.streamshub.clik.test.TestRecordProducer;
 
-import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -213,10 +210,7 @@ class TopicCommandTest extends ClikMainTestBase implements TestRecordProducer {
     void testDescribeTopicWithOffsets(String offsets1, String offsets2, int messageCount, String messageInterval,
             String expected1, String expected2, String expected3) throws Exception {
 
-        topicService.createTopic(admin(), "describe-offsets", 10, 1, Map.of(
-                TopicConfig.FLUSH_MESSAGES_INTERVAL_CONFIG, "1",
-                TopicConfig.INDEX_INTERVAL_BYTES_CONFIG, "128"
-        ));
+        topicService.createTopic(admin(), "describe-offsets", 10, 1, Collections.emptyMap());
         var baseTime = Instant.now().minus(Duration.ofDays(101));
 
         produceMessagesWithTimestamps("describe-offsets",
@@ -224,42 +218,39 @@ class TopicCommandTest extends ClikMainTestBase implements TestRecordProducer {
                 baseTime.toEpochMilli(),
                 Duration.parse(messageInterval).toMillis());
 
-        // Retry for several seconds. The timeindex may not immediately be updated after producing messages
-        await().atMost(10, TimeUnit.SECONDS).untilAsserted(() -> {
-            LaunchResult result = launcher.launch(
-                    "topic", "describe", "describe-offsets",
-                    "--offsets", offsets1,
-                    "--offsets", offsets2
-            );
-            assertEquals(0, result.exitCode());
-            List<String> output = result.getOutputStream();
-            int start = output.indexOf("Partition Details:") + 2;
-            int p = 0;
+        LaunchResult result = launcher.launch(
+                "topic", "describe", "describe-offsets",
+                "--offsets", offsets1,
+                "--offsets", offsets2
+        );
+        assertEquals(0, result.exitCode());
+        List<String> output = result.getOutputStream();
+        int start = output.indexOf("Partition Details:") + 2;
+        int p = 0;
 
-            for (int l = start; l < output.size(); l++) {
-                String partitionLine = output.get(l);
-                assertTrue(partitionLine.matches(
-                        "^"         // start of line
-                        + "\\s+"    // variable whitespace
-                        + (p++)     // partition#
-                        + "\\s+"    // variable whitespace
-                        + "1"       // leader
-                        + "\\s+"    // variable whitespace
-                        + "\\[1\\]" // replicas
-                        + "\\s+"    // variable whitespace
-                        + "\\[1\\]" // ISR
-                        + "\\s+"    // variable whitespace
-                        + expected1 // expected offset 1
-                        + "\\s+"    // variable whitespace
-                        + expected2 // expected offset 2
-                        + "\\s+"    // variable whitespace
-                        + expected3 // expected offset 3
-                        + "\\s*"    // maybe variable whitespace
-                        + "$"       // end of line
-                        ), () -> "Partition line did not match: '" + partitionLine +
-                            System.lineSeparator() + "'. Full output: " + result.getOutput());
-            }
-        });
+        for (int l = start; l < output.size(); l++) {
+            String partitionLine = output.get(l);
+            assertTrue(partitionLine.matches(
+                    "^"         // start of line
+                    + "\\s+"    // variable whitespace
+                    + (p++)     // partition#
+                    + "\\s+"    // variable whitespace
+                    + "1"       // leader
+                    + "\\s+"    // variable whitespace
+                    + "\\[1\\]" // replicas
+                    + "\\s+"    // variable whitespace
+                    + "\\[1\\]" // ISR
+                    + "\\s+"    // variable whitespace
+                    + expected1 // expected offset 1
+                    + "\\s+"    // variable whitespace
+                    + expected2 // expected offset 2
+                    + "\\s+"    // variable whitespace
+                    + expected3 // expected offset 3
+                    + "\\s*"    // maybe variable whitespace
+                    + "$"       // end of line
+                    ), () -> "Partition line did not match: '" + partitionLine +
+                        System.lineSeparator() + "'. Full output: " + result.getOutput());
+        }
     }
 
     @Test
